Upgrade Apache Commons Pool Version