@@ -51,7 +51,7 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.URL;
+import java.net.URI;
 
 import static java.util.stream.Collectors.toSet;
 import static java.util.stream.Stream.of;
@@ -81,7 +81,7 @@ public class GPWMSConnectorStoreV111PrositTest {
     public static void beforeClass() throws Exception {
         wmsServerConnector = wmsConnectorBuilder()
                 .wmsConnectorBuilderV111()
-                .withServerUrl(new URL("https://prosit.geosdi.org/geoserver/wms"))
+                .withServerUrl(new URI("https://prosit.geosdi.org/geoserver/wms").toURL())
                 .withPooledConnectorConfig(pooledConnectorConfigBuilder()
                         .withMaxTotalConnections(20)
                         .withDefaultMaxPerRoute(8)
