@@ -35,7 +35,10 @@
  */
 package org.geosdi.geoplatform.connector.wms.store;
 
-import org.geosdi.geoplatform.connector.server.request.*;
+import org.geosdi.geoplatform.connector.server.request.GPWMSBoundingBox;
+import org.geosdi.geoplatform.connector.server.request.GPWMSGetMapBaseRequest;
+import org.geosdi.geoplatform.connector.server.request.WMSBoundingBox;
+import org.geosdi.geoplatform.connector.server.request.WMSGetMapBaseRequest;
 import org.geosdi.geoplatform.connector.server.v130.GPWMSGetFeatureInfoV130Request;
 import org.geosdi.geoplatform.connector.server.v130.IGPWMSConnectorStoreV130;
 import org.junit.BeforeClass;
@@ -44,7 +47,7 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.URL;
+import java.net.URI;
 
 import static java.util.stream.Collectors.toSet;
 import static java.util.stream.Stream.of;
@@ -69,7 +72,7 @@ public class GPWMSConnectorStoreV130PrositTest {
     public static void beforeClass() throws Exception {
         wmsServerConnector = wmsConnectorBuilder()
                 .wmsConnectorBuilderV130()
-                .withServerUrl(new URL("https://prosit.geosdi.org/geoserver/wms"))
+                .withServerUrl(new URI("https://prosit.geosdi.org/geoserver/wms").toURL())
                 .withPooledConnectorConfig(pooledConnectorConfigBuilder()
                         .withMaxTotalConnections(20)
                         .withDefaultMaxPerRoute(8)
